--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,20 @@
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
-
 spring.datasource.url=jdbc:h2:tcp://localhost/~/ourhome;
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+#spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/oauthdb?useSSL=false&serverTimezone=UTC
+
+# ?????? ??? ??
+#spring.datasource.username=root
+
+# ?????? ??? ????
+#spring.datasource.password=1234
 
 spring.thymeleaf.enabled=true
 spring.thymeleaf.prefix=classpath:/templates/
